fix some layout issues on sign up page

--- a/src/less/components/home.less
+++ b/src/less/components/home.less
@@ -23,6 +23,7 @@
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     form {
+        z-index: 1000;
         // padding: 1em 1em;
         margin: auto;
         padding: 1em;
@@ -220,8 +221,8 @@
 }
 /* ---------------------- SLIDER ------------------- */
 .slider {
-  max-width: 100vw;
-overflow: hidden;
+    max-width: 100vw;
+    overflow: hidden;
     padding: 3em 1em;
     background: @mywheels-green;
 }
