--- a/src/less/components/users.less
+++ b/src/less/components/users.less
@@ -29,6 +29,9 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 3vw;
+    section{
+      width: 100%;
+    }
 }
 .sign-up-terms {
     font-weight: 300;
